--- a/site/index.html
+++ b/site/index.html
@@ -50,7 +50,7 @@
 
 <script id="topic-template" type="text/x-template">
 	<div class="row">
-		<div class="col-sm-12">
+		<div class="col-sm-12 topvid">
 			<video autoplay loop src={{video}}></video>
 		</div>
 	</div>
