--- a/site/index.html
+++ b/site/index.html
@@ -1,65 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Mottisfont</title>
-	<link rel="stylesheet" href="css/site.css">
+    <meta charset="utf-8">
+    <title>Mottisfont</title>
+    <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
 <div class="container">
 </div>
 
 <script id="main-template" type="text/x-template">
-	<div class="row">
-	{{#people}}
-		<a href="#" data-name="{{name}}" class="user-main nav-link col-sm-6 smallthumb">
-			<h2>{{name}}</h2>
-			<div class="thumbcont"> 
-			<video muted autoplay loop src={{loopingVideo}}></video>
-			</div>
-			<!--<img src={{loopingVideo}}>-->
-		</a>
-	{{/people}}
-	</div>
-		<div class="banner1">Across The Table: Welcome to Mottisfont ...</div>
-		<div class="banner2">Choose a dining companion by touching their face</div>
+    <div class="row">
+    {{#people}}
+        <a href="#" data-name="{{name}}" class="user-main nav-link col-sm-6 smallthumb">
+            <h2>{{name}}</h2>
+            <div class="thumbcont">
+            <video muted autoplay loop src={{loopingVideo}}></video>
+            </div>
+            <!--<img src={{loopingVideo}}>-->
+        </a>
+    {{/people}}
+    </div>
+        <div class="banner1">Across The Table: Welcome to Mottisfont ...</div>
+        <div class="banner2">Choose a dining companion by touching their face</div>
 </script>
 
 <script id="person-template" type="text/x-template">
-	<div class="row">
-		<div class="col-sm-12 perthumb">
-			<!--<img src={{loopingVideo}}>-->
-			<video autoplay loop src={{loopingVideo}}></video>
-		</div>
-	</div>
-	<div class="topics row">
-		{{#topics}}
-			<div class="col-sm-4 topic">
-				<a href="#" data-target="topic" class="nav-link btn btn-default btn-lg btn-block">{{.}}</a>
-			</div>
-		{{/topics}}
-	</div>
-	<div class="break-15">
-	<div class="row">
-		<div class="col-sm-12">
-			<div class="banner1">Across The Table: Please Choose a Topic</div>
-			<a href="#" data-target="main" class="nav-link btn btn-default btn-lg btn-block backbtn">Back</a>
-		</div>
-	</div>
+    <div class="row">
+        <div class="col-sm-12 perthumb">
+            <!--<img src={{loopingVideo}}>-->
+            <video autoplay loop src={{loopingVideo}}></video>
+        </div>
+    </div>
+    <div class="topics row">
+        {{#topics}}
+            <div class="col-sm-4 topic">
+                <a href="#" data-target="topic" data-index="{{id}}" class="nav-link btn btn-default btn-lg btn-block">{{text}}</a>
+            </div>
+        {{/topics}}
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="banner1">Across The Table: Please Choose a Topic</div>
+            <a href="#" data-target="main" class="nav-link btn btn-default btn-lg btn-block backbtn">Back</a>
+        </div>
+    </div>
 </script>
 
 <script id="topic-template" type="text/x-template">
-	<div class="row">
-		<div class="col-sm-12 topvid">
-			<video autoplay loop src={{video}}></video>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-sm-12">
-			<div class="banner1">Across The Table:</div>
-			<a href="#" data-target="person" class="nav-link btn btn-default btn-lg btn-block backbtn">Back</a>
-		</div>
-	</div>
+    <div class="row">
+        <div class="col-sm-12 topvid">
+            <video autoplay loop src={{video}}></video>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="banner1">Across The Table: {{name}} - {{topic}}</div>
+            <a href="#" data-target="person" class="nav-link btn btn-default btn-lg btn-block backbtn">Back</a>
+        </div>
+    </div>
 </script>
 
 <script src="js/polyfills.js"></script>
