added intro video to topic selection page

--- a/site/index.html
+++ b/site/index.html
@@ -28,8 +28,7 @@
 <script id="person-template" type="text/x-template">
     <div class="row">
         <div class="col-sm-12 perthumb">
-            <!--<img src={{loopingVideo}}>-->
-            <video autoplay loop src={{loopingVideo}}></video>
+            <video autoplay loop src={{introVideo}}></video>
         </div>
     </div>
     <div class="topics row">
