--- a/site/index.html
+++ b/site/index.html
@@ -34,7 +34,7 @@
     <div class="topics row">
         {{#topics}}
             <div class="col-sm-4 topic">
-                <a href="#" data-target="topic" data-index="{{id}}" class="nav-link btn btn-default btn-lg btn-block">{{text}}</a>
+				<a href="#" data-target="topic" data-index="{{id}}" class="nav-link btn btn-default btn-lg btn-block">{{{text}}}</a>
             </div>
         {{/topics}}
     </div>
