--- a/site/index.html
+++ b/site/index.html
@@ -28,7 +28,7 @@
 <script id="person-template" type="text/x-template">
     <div class="row">
         <div class="col-sm-12 perthumb">
-            <video autoplay loop src={{introVideo}}></video>
+            <video autoplay loop="false" src={{introVideo}}></video>
         </div>
     </div>
     <div class="topics row">
@@ -49,7 +49,7 @@
 <script id="topic-template" type="text/x-template">
     <div class="row">
         <div class="col-sm-12 topvid">
-            <video autoplay loop src={{video}}></video>
+            <video autoplay loop="false" src={{video}}></video>
         </div>
     </div>
     <div class="row">
