--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,7 @@
         </a>
     {{/people}}
     </div>
-        <div class="banner1">Across The Table: Welcome to Mottisfont ...</div>
+        <div class="banner1">In Company: Welcome to Mottisfont ...</div>
         <div class="banner2">Choose a dining companion by touching their face</div>
 </script>
 
@@ -40,7 +40,7 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <div class="banner1">Across The Table: Please Choose a Topic</div>
+            <div class="banner1">In Company: Please Choose a Topic</div>
             <a href="#" data-target="main" class="nav-link btn btn-default btn-lg btn-block backbtn">Back</a>
         </div>
     </div>
