--- a/site/index.html
+++ b/site/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <div class="banner1">Across The Table: {{name}} - {{topic}}</div>
+            <div class="banner1">In Company: {{name}} - {{topic}}</div>
             <a href="#" data-target="person" class="nav-link btn btn-default btn-lg btn-block backbtn">Back</a>
         </div>
     </div>
